# rust-stm32f1

./: Cargo.toml  openocd.cfg
.cargo/: config.toml
src/: main.rs
